# argos-search

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml
.github/: CODEOWNERS  branch-protection.md
.github/workflows/: ci.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  engine.rs  extractors.rs  lib.rs  metadata.rs
crates/frontend/: app.js  index.html  launcher.css  launcher.html  launcher.js  styles.css
crates/tauri-app/: Cargo.toml  tauri.conf.json
crates/tauri-app/icons/: icon.icns
crates/tauri-app/src/: main.rs
