[package]
name = "argos-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Argos Search CLI — index and search from the command line"

[[bin]]
name = "argos-cli"
path = "src/main.rs"

[dependencies]
argos-core = { path = "../core" }
clap = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
