[package]
name = "argos-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Argos Search engine core — indexing and search without GUI dependencies"

[dependencies]
tantivy = { workspace = true }
rusqlite = { workspace = true }
rayon = { workspace = true }
walkdir = { workspace = true }
xxhash-rust = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
dirs = { workspace = true }
unicode-normalization = { workspace = true }

[dev-dependencies]
tempfile = "3"
